@@ -314,11 +314,14 @@ function tohex( s, options )
   -- format hex if we got a separator
   if separator then
     local group = options.group or 2
-    local subs = 0
-    local pat = "(%x)(" .. rep("[^:]", group) .. ")%f[\0:]"
-    repeat
-      hex, subs = gsub(hex, pat, "%1:%2")
-    until subs == 0
+    local extra = (group - #hex % group) % group
+    if extra > 0 then
+      -- pad the input to make it an exact multiple of the group size
+      hex = rep("0", extra) .. hex
+    end
+    hex = gsub(hex, rep(".", group), "%0" .. gsub(separator, "%%", "%%%%"))
+    -- remove the padding and trim the last separator
+    hex = sub(hex, extra + 1, -(#separator + 1))
   end
 
   return hex
